# a-raft-transport

./: ABOUT-RAFT.md  BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  RAFT-PROTOCOL.md  README.md  build.sh  scaffold.yaml
include/a-raft-transport/: raft_codec.h
src/: raft_codec.c
tests/: .gitignore  CMakeLists.txt
tests/src/: test_raft_codec.c
